--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"dbaeumer.vscode-eslint",
-				"svelte.svelte-vscode"
+				"svelte.svelte-vscode",
+				"EditorConfig.EditorConfig"
 			]
 		}
 	},
