--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"ssss-js": "^1.1.0"
+	}
 }
