--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.26.1",
 		"@popperjs/core": "^2.11.6",
-		"@sveltejs/adapter-auto": "^1.0.0-next.80",
+		"@sveltejs/adapter-static": "^1.0.0-next.44",
 		"@sveltejs/kit": "^1.0.0-next.507",
 		"@types/qrcode": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
