--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.27.1",
+		"@playwright/test": "^1.28.1",
 		"@popperjs/core": "^2.11.6",
-		"@sveltejs/adapter-static": "^1.0.0-next.44",
-		"@sveltejs/kit": "^1.0.0-next.507",
+		"@sveltejs/adapter-static": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
 		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.41.0",
-		"@typescript-eslint/parser": "^5.41.0",
-		"autoprefixer": "^10.4.12",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"@typescript-eslint/parser": "^5.46.1",
+		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
-		"eslint": "^8.26.0",
+		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"flowbite": "^1.5.3",
-		"flowbite-svelte": "^0.27.10",
-		"postcss": "^8.4.18",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
-		"svelte": "^3.52.0",
-		"svelte-check": "^2.9.2",
+		"flowbite": "^1.5.5",
+		"flowbite-svelte": "^0.27.17",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.2",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.1",
-		"tslib": "^2.4.0",
-		"typescript": "^4.8.4",
-		"vite": "^3.1.8"
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.2.0",
-		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"html5-qrcode": "^2.2.4",
+		"@fortawesome/free-brands-svg-icons": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"html5-qrcode": "^2.3.4",
 		"qrcode": "^1.5.1",
 		"ssss-js": "^1.1.0",
 		"svelte-fa": "^3.0.3"
