--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.20.5",
 		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.60.0",
-		"@typescript-eslint/parser": "^5.60.0",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
 		"autoprefixer": "^10.4.14",
 		"classnames": "^2.3.2",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.31.1",
 		"flowbite": "^1.6.6",
-		"flowbite-svelte": "^0.32.1",
+		"flowbite-svelte": "^0.38.5",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.2",
+		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.4",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.5.3",
-		"typescript": "^4.9.5",
+		"typescript": "^5.1.3",
 		"vite": "^4.3.9"
 	},
 	"type": "module",
@@ -45,6 +45,7 @@
 		"html5-qrcode": "^2.3.8",
 		"qrcode": "^1.5.3",
 		"ssss-js": "^1.1.0",
-		"svelte-fa": "^3.0.4"
+		"svelte-fa": "^3.0.4",
+		"tailwind-merge": "^1.13.2"
 	}
 }
