--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.27.2",
 		"@types/qrcode": "^1.5.4",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
+		"@typescript-eslint/eslint-plugin": "^6.9.1",
+		"@typescript-eslint/parser": "^6.9.1",
 		"autoprefixer": "^10.4.16",
 		"classnames": "^2.3.2",
 		"eslint": "^8.52.0",
-		"eslint-config-prettier": "^8.10.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
-		"flowbite": "^1.8.1",
-		"flowbite-svelte": "^0.38.5",
+		"flowbite": "^2.0.0",
+		"flowbite-svelte": "^0.44.18",
 		"postcss": "^8.4.31",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.5",
+		"tailwind-merge": "^2.0.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.5.0"
@@ -45,7 +46,6 @@
 		"html5-qrcode": "^2.3.8",
 		"qrcode": "^1.5.3",
 		"ssss-js": "^1.1.0",
-		"svelte-fa": "^3.0.4",
-		"tailwind-merge": "^1.14.0"
+		"svelte-fa": "^3.0.4"
 	}
 }
