--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
 	"devDependencies": {
 		"@playwright/test": "^1.40.1",
 		"@popperjs/core": "^2.11.8",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.30.3",
+		"@sveltejs/adapter-static": "^3.0.0",
+		"@sveltejs/kit": "^2.0.1",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/qrcode": "^1.5.5",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
@@ -37,7 +38,7 @@
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.1"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
