Disable IPv6 for devcontainer
On IPv6-enabled hosts, there is an issue with vscode and port
forwarding.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,5 +38,6 @@
 	"features": {
 		"git": "latest",
 		"docker-from-docker": "latest"
-	}
+	},
+	"runArgs": [ "--sysctl", "net.ipv6.conf.all.disable_ipv6=1" ]
 }
